# steam-next

./: .gitattributes  .gitignore  .readthedocs.yaml  Makefile  README.md  generate_enums_from_proto.py  protobuf_list.txt  pyproject.toml  vermin.conf
.github/: dependabot.yml
docs/: conf.py  global.rst  install.rst  intro.rst  user_guide.rst
protobufs/: clientmetrics.proto  contenthubs.proto  enums.proto  enums_clientserver.proto  enums_productinfo.proto  htmlmessages.proto  steamdatagram_messages_auth.proto  steamdatagram_messages_sdr.proto  steammessages_accounthardware.proto  steammessages_appoverview.proto  steammessages_auth.proto  steammessages_base.proto  steammessages_broadcast.proto  steammessages_chat.proto  steammessages_childprocessquery.proto  steammessages_client_objects.proto  steammessages_clientlanp2p.proto  steammessages_clientmetrics.proto  steammessages_clientnotificationtypes.proto  steammessages_clientserver.proto  steammessages_clientserver_2.proto  steammessages_clientserver_appinfo.proto  steammessages_clientserver_friends.proto  steammessages_clientserver_gameservers.proto  steammessages_clientserver_login.proto  steammessages_clientserver_mms.proto  steammessages_clientserver_ucm.proto  steammessages_clientserver_uds.proto  steammessages_clientserver_userstats.proto  steammessages_clientserver_video.proto  steammessages_clientsettings.proto  steammessages_cloud.proto  steammessages_community.proto  steammessages_contentsystem.proto  steammessages_credentials.proto  steammessages_datapublisher.proto  steammessages_depotbuilder.proto  (+67 more)
(+175 files in other folders)
