[project]
name = "steam-next"
version = "2.1.0"
description = "Python package for interacting with Steam"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    { name = "Rossen Georgiev", email = "rossen@rgp.io" }
]
maintainers = [
    { name = "Fabian Eulitz", email = "dev@sustineo.de" }
]
keywords = ["valve", "steam", "steamid", "api", "webapi", "steamcommunity"]
dependencies = [
    "pycryptodomex (>=3.23.0,<4.0)",
    "requests (>=2.32.5,<3.0)",
    "vdf (>=3.4.0,<4.0)",
    "cachetools (>=6.2.4,<7.0)",
]

[project.optional-dependencies]
client = [
    "protobuf (>=6.33.2,<7.0)",
    "gevent>=1.3.0",
    "gevent-eventemitter (>=2.1,<3.0)",
]
docs = [
    "sphinx==8.2.3 ; python_version >= '3.11'",
    "sphinx_rtd_theme==3.0.2 ; python_version >= '3.11'"
]

[dependency-groups]
dev = [
    "PyYAML (>=6.0.3,<7.0)",
    "vcrpy (>=7.0.0,<9.0)",
    "mock (>=5.2.0, <6.0)",
    "pytest-cov (>=7.0.0,<8.0)",
    "pylint (>=3.3.9,<4.0)",
    "protobuf (>=6.33.2,<7.0)",
    "vermin (>=1.8.0,<2.0)",
]

[tool.poetry]
packages = [
    { include = "steam" }
]

[tool.poetry.urls]
documentation = "https://steam-next.readthedocs.io"
repository = "https://github.com/fabieu/steam-next"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
